# claude-zellij-monitor

./: Cargo.toml  LICENSE  README.md  claude-zellij-hook.sh  install.sh
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: lib.rs
src/: main.rs
